# Odysseus

./: .editorconfig  .env.example  .gitignore  .gitmodules  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.crosshost.yml  docker-compose.e2e.yml  install.sh  install_dev.sh  justfile  pixi.toml  renovate.json
.claude/: settings.json
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
ci-cd/: ProjectProteus
docs/: README.md  architecture.md  ci-naming-convention.md  deployment.md  e2e-walkthrough-report.md  ecosystem-status.md  nats-subjects.md  odysseus-ai-maestro-analysis.md  odysseus-ruflo-analysis.md  onboarding.md  repo-conventions.md
e2e/: Dockerfile.argus-exporter  claude-myrmidon-multi.py  claude-myrmidon.py  docker-compose.chaos.yml  docker-compose.cluster.yml  docker-compose.hermes-hub.yml  docker-compose.scale.yml  doctor.sh  prometheus.crosshost.yml  prometheus.runtime.yml  prometheus.yml  promtail.yml  run-crosshost-e2e.sh  run-hello-world.sh  run-hermes-hub-e2e.sh  run-ipc-tests.sh  start-crosshost.sh  start-hermes-hub.sh  start-stack.sh  teardown.sh  test-adr-007.sh  test-build-idempotent.sh  test-common-retry.sh  test-docsreadme-standardize-cicd-badges-keystone.sh  test-justfile-achaean-fleet.sh  test-justfile-hephaestus.sh  test-justfile-mnemosyne.sh  test-justfile-nestor.sh  test-justfile-proteus.sh  test-myrmidon-issue-number.sh  (+6 more)
e2e/conan-consumer/: CMakeLists.txt  conanfile.py  main.cpp
(+191 files in other folders)
